environments/gloo-gateway/gateway-api/live/demo-admin-config/base/prometheus/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prometheus-httproute
  namespace: gloo-mesh
  labels:
    example: prometheus
    gateway: https
spec:
  hostnames:
  - "prometheus.admin.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - matches:
      - path:
          type: Exact
          value: /healthz
      backendRefs:
      - name: prometheus-server
        port: 80
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: prometheus-health-route-policies
    - matches:
      - path:
          type: PathPrefix
          value: /
      - path:
          type: PathPrefix
          value: /callback
      backendRefs:
      - name: prometheus-server
        port: 80
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: prometheus-route-policies
